--- a/assets/css/proyecto-estilo.css
+++ b/assets/css/proyecto-estilo.css
@@ -253,12 +253,20 @@ footer{
     color:white;
 }
 
+.form_control{
+    width:100%;
+}
+
 .botón{
     background:black;
     border:5px solid white;
-    width:50%;
+    width:100%;
     height:70px;
     
+}
+
+.botón .btn{
+    color:white;
 }
 
 .botón:hover{
